# gander-llm-cli

./: README.md  pyproject.toml  requirements.lock.txt  requirements.txt
examples/: sample_output.json
src/gander_llm_cli/: __init__.py  __main__.py  cli.py
tests/: test_smoke.py
